deployments/pathweb/workloads/ai-lab/openclaw/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw
  labels:
    app.kubernetes.io/name: openclaw
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - openclaw.services.home.yrf.me
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ak-outpost-authentik-embedded-outpost
    backendRefs:
    - name: openclaw
      port: 18789
