deployments/pathweb/workloads/ai-lab/openclaw/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openclaw-policy
  namespace: ai-lab
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openclaw
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: '18789'
        protocol: TCP
      rules:
        http: [{}]
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      rules:
        http: [{}]
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
